[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["keshan <keshansharp123@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
tdqm = "^0.0.1"
pandas = "^2.2.2"
ipykernel = "^6.29.5"
pyarrow = "^16.1.0"
tqdm = "^4.66.4"
plotly = "^5.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
